Bug 323444 - Kate symbol list flickers when document is updated
Summary: Kate symbol list flickers when document is updated
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL: http://www.youtube.com/watch?v=bhnpoj...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-13 05:41 UTC by John Schroeder
Modified: 2013-08-13 08:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
Proposed patch (475 bytes, patch)
2013-08-13 05:43 UTC, John Schroeder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Schroeder 2013-08-13 05:41:00 UTC
When the document is updated, kate's symbol list viewer plugin flickers and doesn't indicate the current location unless the cursor position is changed.

Reproducible: Always

Steps to Reproduce:
1. Enable symbol list viewer
2. Open/create file with some content that will populate symbol list viewer
3. Make changes to the document and note symbol list flickering
4. This is especially distracting in tree view
Actual Results:  
Symbol list flickers in a very distracting manner and doesn't correctly indicated the current cursor position unless it is changed.

Expected Results:  
Symbol list should not flicker and always indicate the current cursor position.
Comment 1 John Schroeder 2013-08-13 05:43:57 UTC
Created attachment 81687 [details]
Proposed patch
Comment 2 John Schroeder 2013-08-13 05:45:47 UTC
I have attached a patch that fixes the issue by calling updateCurrTreeItem() at the end of slotRefreshSymbol() and there is a link to youtube demonstrating the flickering in the details.
Comment 3 Dominik Haumann 2013-08-13 08:06:41 UTC
Git commit dd46408f052b0324619b12366d836edcacc8299c by Dominik Haumann.
Committed on 13/08/2013 at 08:06.
Pushed by dhaumann into branch 'master'.

fix flickering in symbol viewer

Thanks to John for the patch!

FIXED-IN: 4.11.1

M  +1    -0    addons/kate/symbolviewer/plugin_katesymbolviewer.cpp

http://commits.kde.org/kate/dd46408f052b0324619b12366d836edcacc8299c
Comment 4 Dominik Haumann 2013-08-13 08:08:55 UTC
Git commit a8f38166c8ab5d7974a497b05f858cc0c17620ba by Dominik Haumann.
Committed on 13/08/2013 at 08:06.
Pushed by dhaumann into branch 'KDE/4.11'.

fix flickering in symbol viewer

Thanks to John for the patch!

FIXED-IN: 4.11.1

M  +1    -0    addons/kate/symbolviewer/plugin_katesymbolviewer.cpp

http://commits.kde.org/kate/a8f38166c8ab5d7974a497b05f858cc0c17620ba