fix flickering in symbol viewer

Thanks to John for the patch!

FIXED-IN: 4.11.1
BUG: 323444